[project]
name = "spotify-wallpaper-windows"
version = "0.1.0"
description = "Windows daemon that plays matching video wallpapers for Spotify tracks"
requires-python = ">=3.11"
dependencies = [
    "winsdk>=1.0.0b10",
    "pycaw>=20240210",
    "Pillow>=10.0",
    "psutil>=5.9",
]

[project.scripts]
spotify-wallpaper = "main:main_sync"
